css/style.css
/* ... */
.block {
    display: block !important;
}

.hide {
    display: none !important;
}


/*max-width 768*/
@media (max-width: 768px) {

    body.entered[data-design="option-1"]::before,
    body.entered[data-design="option-2"]::before,
    body.entered[data-design="option-3"]::before,
    body.entered[data-design="option-4"]::before {
        content: "";

        position: fixed;
        top: 10px;
        left: -200px;
        width: 100%;
        height: 100%;
        background-image: url("../img/MA_Logo.png");
        background-repeat: no-repeat;
        background-position: top;
        filter: grayscale(100%);
        opacity: .2;

    }


}

@media ((max-width: 768px)) {

    .list-group-item {

        margin-left: 10px;
        margin-right: 30px;
        margin-top: 25px;
        overflow: hidden;
    }

    .thumbContainer {
        height: 200px;
    }

    i.play-float-icon {

        font-size: 10rem;
        top: 115px;


    }

}

/* No greater than 900px, no less than 455px */
@media ((max-width: 768px) and (min-width: 455px)) {

    #designOptions {
        margin-top: 5%;
    }




}

/*end 768 -455*/
/*max-width 768*/
@media (max-width: 455px) {

    body[data-design="option-2"]::before {
        left: -75px;
    }

}

.teaserImg {
    max-height: 160px;
    overflow: hidden;
    -webkit-filter: grayscale(100%);
    /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.imgFrame {
    text-align: left;
}

.imgIcon .fas {
    position: absolute;
    z-index: 9;
    font-size: 5rem;
    opacity: 1;
    display: block;
    color: #fff;
    margin-left: 40%;
    margin-top: 13%;
}

